# dwd

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
config/: .env.example  config_exampl.json  config_exampl.toml  config_exampl.yaml
src/: config.rs  main.rs  util.rs
src/dns_provider/: dynv6_com.rs  mod.rs  name_com.rs
src/ip_provider/: mod.rs  myip_ipip_net.rs  myip_la.rs  vnet_one.rs
