[package]
name = "dwd"
version = "0.1.0"
authors = ["Link <xie.al@qq.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
console = "0.15"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
toml = "0.5"
serde_yaml = "0.8"
dotenv = "0.15.0"
simple-error = "0.2"
